--- a/style/st.css
+++ b/style/st.css
@@ -2,19 +2,29 @@ body {
     background-color: rgba(0, 48, 179, 0.623);
     box-sizing: border-box;
     margin: 0;
-    
 }
 
 .tank {
-    padding-top: 150px;
-    display: flex;
+    /* padding-top: 150px;
+    display: flex; 
     justify-content: center;
-    align-items: center;
-   }
+    align-items: center;*/
+    position: fixed;
+    top: 150px;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    }
 
-   .img {
-    width: 250px;
-   }
+.certificate {
+    /* display: block; */
+    position: relative;
+    top: 100px;
+    left: 5%;
+    }
+
+.img {  
+    width: 500px;
+    }
 
 .spinner {
     width: 250px;
