--- a/style/st.css
+++ b/style/st.css
@@ -4,26 +4,29 @@ body {
     margin: 0;
 }
 
+.container {
+    text-align: center;
+    vertical-align: middle;
+
+    border: 4px solid rgb(255, 5, 5);
+}
 .tank {
-    /* padding-top: 150px;
-    display: flex; 
-    justify-content: center;
-    align-items: center;*/
-    position: fixed;
-    top: 150px;
+    position: absolute;
+    top: 500px;
     left: 50%;
     transform: translate(-50%, 0%);
+    border: 2px solid rgb(0, 255, 13);
     }
 
 .certificate {
-    /* display: block; */
-    position: relative;
-    top: 100px;
-    left: 5%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    border: 2px solid yellow;
     }
 
 .img {  
-    width: 500px;
+    width: 390px;
     }
 
 .spinner {
