--- a/style/st.css
+++ b/style/st.css
@@ -7,22 +7,21 @@ body {
 .container {
     text-align: center;
     vertical-align: middle;
-
-    border: 4px solid rgb(255, 5, 5);
+    /* border: 4px solid rgb(255, 5, 5); */
 }
 .tank {
     position: absolute;
     top: 500px;
     left: 50%;
     transform: translate(-50%, 0%);
-    border: 2px solid rgb(0, 255, 13);
+    /* border: 2px solid rgb(0, 255, 13); */
     }
 
 .certificate {
     display: flex; 
     justify-content: center;
     align-items: center;
-    border: 2px solid yellow;
+    /* border: 2px solid yellow; */
     }
 
 .img {  
